[package]
name = "viewport-lib-terrain"
version = "1.0.1"
edition = "2024"
description = "Heightmap and splatmap terrain rendering for viewport-lib"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/grimandgreedy/viewport-lib-terrain"
homepage = "https://github.com/grimandgreedy/viewport-lib-terrain"
documentation = "https://docs.rs/viewport-lib-terrain"
keywords = ["3d", "terrain", "heightmap", "viewport", "viewport-lib"]
categories = ["graphics", "rendering", "visualization"]
rust-version = "1.85"
publish = true
exclude = ["examples/"]

[dependencies]
viewport-lib = { path = "../viewport-lib", version = "0.18" }
wgpu = "27.0"
glam = { version = "=0.30.10", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }

[dev-dependencies]
eframe = { version = "=0.33.3", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.33"

[[example]]
name = "eframe-terrain"
path = "examples/eframe_terrain.rs"

[[example]]
name = "eframe-terrain-lod"
path = "examples/eframe_terrain_lod.rs"

[[example]]
name = "eframe-plugin-jobs"
path = "examples/eframe_plugin_jobs.rs"

[[example]]
name = "eframe-terrain-stress"
path = "examples/eframe_terrain_stress.rs"
